[gd_scene load_steps=10 format=3 uid="uid://die74fxa8v3mq"]

[ext_resource type="FontFile" uid="uid://bket4wvordedt" path="res://Global/Assets/Fonts/Garet-Book.ttf" id="1_veisa"]
[ext_resource type="Theme" uid="uid://wp8ddjys7ug4" path="res://Global/Assets/Theme/mini_menu.theme" id="2_ee4bf"]
[ext_resource type="Script" uid="uid://bprlopndlokr" path="res://Menu/MenuBar/next.gd" id="3_kbped"]
[ext_resource type="Script" uid="uid://cbff1we6mnpgc" path="res://Menu/Buttons/home_button.gd" id="3_qnwc3"]
[ext_resource type="AudioStream" uid="uid://bt33awcesebhf" path="res://Global/Assets/Audio/SFX/invalid.ogg" id="4_sh545"]
[ext_resource type="AudioStream" uid="uid://bmr4y27i0vs0e" path="res://Global/Assets/Audio/SFX/wrong.ogg" id="5_4ujyw"]
[ext_resource type="Script" uid="uid://drbv22k764itu" path="res://Menu/MenuBar/progress.gd" id="5_kwfyj"]
[ext_resource type="AudioStream" uid="uid://bmlxxyb3jwfai" path="res://Global/Assets/Audio/SFX/correct.ogg" id="6_s25yw"]

[sub_resource type="LabelSettings" id="LabelSettings_c1hg6"]
font = ExtResource("1_veisa")
font_size = 42
font_color = Color(0, 0, 0, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchor_top = 0.933
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.47998
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9098039, 0.90588236, 0.90588236, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_c1hg6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1896.0
offset_top = -28.059998
offset_right = -1832.0
offset_bottom = 26.940002
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ee4bf")
text = "X"
script = ExtResource("3_qnwc3")

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -28.059998
offset_right = -32.0
offset_bottom = 27.940002
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ee4bf")
text = "Check"
script = ExtResource("3_kbped")

[node name="Retry" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -28.059998
offset_right = -144.0
offset_bottom = 27.940002
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_ee4bf")
text = "Retry"

[node name="Progress" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 11.880005
offset_right = 242.0
offset_bottom = 59.880005
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_veisa")
theme_override_font_sizes/font_size = 32
script = ExtResource("5_kwfyj")

[node name="AudioInvalid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sh545")
volume_db = 15.0

[node name="AudioWrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4ujyw")
volume_db = 15.0

[node name="AudioCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_s25yw")
volume_db = 15.0
